RESOLVED FIXED137853
WorkQueue dispatches functions but isn’t a FunctionDispatcher
https://bugs.webkit.org/show_bug.cgi?id=137853
Summary WorkQueue dispatches functions but isn’t a FunctionDispatcher
mitz
Reported 2014-10-18 11:20:25 PDT
WorkQueue is a function dispatcher, but it doesn’t inherit from WTF::FunctionDispatcher.
Attachments
Make WorkQueue a FunctionDispatcher (2.75 KB, patch)
2014-10-18 11:22 PDT, mitz
andersca: review+
mitz
Comment 1 2014-10-18 11:22:06 PDT
Created attachment 240067 [details] Make WorkQueue a FunctionDispatcher
WebKit Commit Bot
Comment 2 2014-10-18 11:25:08 PDT
Attachment 240067 [details] did not pass style-queue: ERROR: Source/WebKit2/Platform/WorkQueue.h:68: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-10-18 11:32:12 PDT
Comment on attachment 240067 [details] Make WorkQueue a FunctionDispatcher View in context: https://bugs.webkit.org/attachment.cgi?id=240067&action=review > Source/WebKit2/Platform/WorkQueue.h:68 > + virtual void dispatch(std::function<void ()>) override final; I'd just make WorkQueue itself final.
mitz
Comment 4 2014-10-18 12:04:52 PDT
Note You need to log in before you can comment on or make changes to this bug.