WorkQueue dispatches functions but isn’t a FunctionDispatcher https://bugs.webkit.org/show_bug.cgi?id=137853

Reviewed by Anders Carlsson.

Source/WebKit2:

* Platform/WorkQueue.h: Changed to inherit from FunctionDispatcher.

Source/WTF:

* wtf/FunctionDispatcher.h: Added header guards.



Canonical link: https://commits.webkit.org/155720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174864 268f45cc-cd09-0410-ab3c-d52691b4dbfc